--- a/Hussain AL Mansour Lab2.ipynb
+++ b/Hussain AL Mansour Lab2.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "27ca09c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name is : Hussain AL Mansour\n",
+      "Id :444105362\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Name is : Hussain AL Mansour\")\n",
+    "print (\"Id :444105362\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "d6079c00",
    "metadata": {},
